<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".modules.subject.CreateSubjectActivity">
        <include
            android:id="@+id/include"
            layout="@layout/component_sign_header"
            app:descriptionTxt="@{@string/dash_create_subject_description}" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gui_create_sub_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="24dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gui_create_sub_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="24dp" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/dash_create_subject_name_input_label"
            android:textColor="@color/text_secondary"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="@+id/gui_create_sub_left"
            app:layout_constraintTop_toBottomOf="@+id/include" />

        <EditText
            android:id="@+id/editTextEmail"
            style="@style/MainInput"
            android:layout_marginTop="6dp"
            android:hint="@string/dash_create_subject_name_input"
            android:inputType="textNoSuggestions"
            app:layout_constraintEnd_toStartOf="@+id/gui_create_sub_right"
            app:layout_constraintStart_toStartOf="@+id/gui_create_sub_left"
            app:layout_constraintTop_toBottomOf="@+id/textView10" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/dash_create_subject_description_input_label"
            android:textColor="@color/text_secondary"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="@+id/gui_create_sub_left"
            app:layout_constraintTop_toBottomOf="@+id/editTextEmail" />

        <EditText
            android:id="@+id/editTextTextMultiLine"
            style="@style/MainInput"
            android:layout_height="140dp"
            android:layout_marginTop="6dp"
            android:gravity="start|top"
            android:hint="@string/dash_create_subject_description_input"
            android:inputType="textMultiLine"
            android:paddingTop="16dp"
            app:layout_constraintEnd_toStartOf="@+id/gui_create_sub_right"
            app:layout_constraintStart_toStartOf="@+id/gui_create_sub_left"
            app:layout_constraintTop_toBottomOf="@+id/textView11" />

        <Button
            android:id="@+id/btn_create_subject"
            style="@style/MainButton"
            android:layout_marginBottom="24dp"
            android:text="@string/dash_create_subject_btn"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/gui_create_sub_right"
            app:layout_constraintStart_toStartOf="@+id/gui_create_sub_left" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>