<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".modules.auth.ProfileActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gui_profile_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="24dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gui_profile_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="24dp" />

    <ImageView
        android:id="@+id/imgViewHeaderDetailsLeftBtn"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="14dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textViewHeaderDetails12"
        app:srcCompat="@drawable/ic_baseline_arrow_back"
        app:tint="@color/gray_600" />

    <TextView
        android:id="@+id/textViewHeaderDetails12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="24dp"
        android:text="@string/profile_title"
        android:textAlignment="viewEnd"
        android:textColor="@color/grey_dark"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewHeaderDetails13"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="24dp"
        android:text="@string/profile_description"
        android:textAlignment="viewEnd"
        android:textColor="@color/text_bold"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewHeaderDetails12" />

    <Button
        android:id="@+id/btn_delete_account"
        style="@style/DeleteButton"
        android:layout_marginBottom="24dp"
        android:text="@string/profile_delete_btn"
        android:backgroundTint="@color/red"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/gui_profile_right"
        app:layout_constraintStart_toStartOf="@+id/gui_profile_left" />

    <TextView
        android:id="@+id/txtViewSignOut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/profile_sign_out_btn"
        android:textColor="@color/text_bold"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_delete_account"
        app:layout_constraintEnd_toStartOf="@+id/gui_profile_right"
        app:layout_constraintStart_toStartOf="@+id/gui_profile_left" />
</androidx.constraintlayout.widget.ConstraintLayout>
