<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".modules.tasks.CreateTaskActivity">
        <include
            android:id="@+id/includeCreateTask"
            layout="@layout/component_sign_header"
            app:descriptionTxt="@{@string/dash_create_subject_task_description}" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gui_create_task_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="24dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gui_create_task_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="24dp" />

        <TextView
            android:id="@+id/txtViewCreateTaskLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/dash_create_subject_task_name_input_label"
            android:textColor="@color/text_secondary"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="@+id/gui_create_task_left"
            app:layout_constraintTop_toBottomOf="@+id/includeCreateTask" />

        <EditText
            android:id="@+id/editTextTask"
            style="@style/MainInput"
            android:layout_marginTop="6dp"
            android:hint="@string/dash_create_subject_task_name_input"
            android:inputType="textNoSuggestions"
            app:layout_constraintEnd_toStartOf="@+id/gui_create_task_right"
            app:layout_constraintStart_toStartOf="@+id/gui_create_task_left"
            app:layout_constraintTop_toBottomOf="@+id/txtViewCreateTaskLabel" />

        <TextView
            android:id="@+id/txtViewCreateTaskPriorityLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/dash_create_subject_task_priority_input_label"
            android:textColor="@color/text_secondary"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="@+id/gui_create_task_left"
            app:layout_constraintTop_toBottomOf="@+id/editTextTask" />

        <Button
            android:id="@+id/btn_create_task"
            style="@style/MainButton"
            android:layout_marginBottom="24dp"
            android:padding="2dp"
            android:text="@string/dash_create_subject_task_btn"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/gui_create_task_right"
            app:layout_constraintStart_toStartOf="@+id/gui_create_task_left" />

        <Spinner
            android:id="@+id/spinnerPriorityCategory"
            style="@style/DefaultSizeConfig"
            android:background="@drawable/ic_round_border_view"
            android:layout_marginTop="6dp"
            android:spinnerMode="dialog"
            app:layout_constraintEnd_toStartOf="@+id/gui_create_task_right"
            app:layout_constraintStart_toStartOf="@+id/gui_create_task_left"
            app:layout_constraintTop_toBottomOf="@+id/txtViewCreateTaskPriorityLabel" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>